# fork-gitlab-ai-reviewer

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  gitlab_client.py  main.py  openai_service.py  pyproject.toml  pytest.ini  requirements.txt  run_gitlab_llm_pipeline.py
src/: boy_scout_prompt.py  boy_scout_queue.py  boy_scout_service.py  boy_scout_state.py  gitlab_client.py  llm_client.py  main.py  openai_service.py  rate_limiter.py  review_chain.py  review_prompt.py  review_service.py  task_queue.py  types.py
src/app/: config.py  main.py  orchestrator.py  webhook.py
src/domains/boy_scout/: prompt.py  selector.py  service.py  tasks.py
src/domains/refactor_suggestion/: prompt.py  service.py  tasks.py
src/domains/review/: chain.py  prompt.py  service.py  tasks.py
src/infra/clients/: gitlab.py  llm.py
src/infra/monitoring/: llm_webhook.py
src/infra/queue/: inprocess_queue.py
src/infra/repositories/: boy_scout_state_repo.py  refactor_suggestion_state_repo.py  review_cache_repo.py
src/shared/: comment_utils.py  errors.py  rate_limiter.py  time_utils.py  types.py
src/utils/: time_utils.py
tests/: conftest.py  test_app_config.py  test_boy_scout_runtime.py  test_boy_scout_service.py  test_boy_scout_state.py  test_gitlab_client_env.py  test_inprocess_queue.py  test_llm_client_env.py  test_openai_service_env.py  test_rate_limiter.py  test_refactor_suggestion_runtime.py  test_refactor_suggestion_service.py  test_refactor_suggestion_state.py  test_review_prompt.py  test_review_service.py  test_webhook_routing.py
